@@ -1,5 +1,5 @@
 .\" -*- nroff -*-
-.\" Copyright © 2009-2020 Inria.  All rights reserved.
+.\" Copyright © 2009-2021 Inria.  All rights reserved.
 .\" Copyright © 2009-2010 Université of Bordeaux
 .\" Copyright © 2009-2010 Cisco Systems, Inc.  All rights reserved.
 .\" Copyright © 2020 Hewlett Packard Enterprise.  All rights reserved.
@@ -97,6 +97,11 @@ memory attribute details depending on the verbosity level).
 .TP
 \fB\-\-cpukinds\fR
 Only display CPU kinds.
+.TP
+B\-\-windows\-processor\-groups\fR
+On Windows, only show information about processor groups.
+All of them are displayed, while the default verbose output
+only shows them if there are more than one.
 .TP
 \fB\-f\fR \fB\-\-force\fR
 If the destination file already exists, overwrite it.
